--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#333366</color>
+    <color name="secondary">#5C5493</color>
+    <color name="subtext">#DDDBDB</color>
+    <color name="line_color">#03A9F4</color>
 </resources>
