Added splash screen

--- a/app/src/main/res/layout/activity_planet_detail.xml
+++ b/app/src/main/res/layout/activity_planet_detail.xml
@@ -171,6 +171,7 @@
         </ScrollView>
 
         <TextView
+            android:id="@+id/book_info"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
